<resources>
    <string name="app_name">Trombinoscope</string>
    <string name="bouton_trombi">Trombinoscope</string>
    <string name="bouton_config">Config</string>
    <string name="firstname">First name</string>
    <string name="surname">surname</string>
    <string name="insertColor">color (int)</string>
    <string name="insertColorR">red (int)</string>
    <string name="insertColorG">green (int)</string>
    <string name="insertColorB">blue (int)</string>
    <string name="ajouter_p">ajouter personne</string>
    <string name="action_refresh">Delete</string>

</resources>
